# qt-sensors-vl53l0x

./: CMakeLists.txt  README.md  qvl53l0x.cpp  qvl53l0x.h  qvl53l0x_global.h  qvl53l0x_p.h  qvl53l0xbackend.cpp  qvl53l0xbackend.h  qvl53l0xplugin.h  qvl53l0xreading.cpp  qvl53l0xreading.h
